--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-    "presets": ["es2015"]
+    "presets": [
+        "react",
+        "es2015",
+        "stage-0"
+    ],
+    "plugins": [
+        [
+            "babel-plugin-transform-require-ignore",
+            {
+                "extensions": [".css"]
+            }
+        ]
+    ]
 }
