--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
     "presets": [
-        "react",
         "es2015",
-        "stage-0"
+        "env",
+        "react-app"
     ],
     "plugins": [
         [
