--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "serverside",
     "ssr"
   ],
-  "main": "public",
   "dependencies": {
     "express": "^4.15.4",
     "morgan": "^1.8.2",
@@ -49,8 +48,9 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-require-ignore": "^0.1.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^3.0.2",
     "babel-preset-stage-0": "^6.24.1"
   }
 }
